3.0.0-preview-6.1.1 (checkpoint commit) - feat: document http session controller endpoints
