# src/Presentation/Http/Controller/HttpSessionController.php
@@ -10,7 +10,7 @@ use Mvreisg\GamebaseBackend\Domain\User\ValueObject\Password\Decoded\DecodedPass
 use Mvreisg\GamebaseBackend\Domain\User\ValueObject\Username\Username;
 use Mvreisg\GamebaseBackend\Infrastructure\Arrays\ArrayKeysExistanceChecker;
 use Mvreisg\GamebaseBackend\Infrastructure\Time\Duration;
-use Mvreisg\GamebaseBackend\Infrastructure\Time\TimeUnit;
+use Mvreisg\GamebaseBackend\Infrastructure\Time\Unit\TimeUnit;
 use Mvreisg\GamebaseBackend\Presentation\Http\Util\Response\HttpMissingKeysInformerResponse;
 use Psr\Http\Message\ResponseInterface;
 use Psr\Http\Message\ServerRequestInterface;
@@ -116,6 +116,18 @@ class HttpSessionController
         )
     )]
     #[OA\Response(
+        response: 401,
+        description: "Response if user does not have credentials",
+        content: new OA\JsonContent(
+            properties: [
+                new OA\Property(
+                    property: "message",
+                    type: "string",
+                ),
+            ]
+        )
+    )]
+    #[OA\Response(
         response: 404,
         description: "Response if a body value is missing, if the user does not exist",
         content: new OA\JsonContent(
@@ -140,6 +152,41 @@ class HttpSessionController
                 ),
                 new OA\Schema(
                     title: "User not found",
+                    properties: [
+                        new OA\Property(
+                            property: "message",
+                            type: "string",
+                        )
+                    ]
+                )
+            ]
+        )
+    )]
+    #[OA\Response(
+        response: 500,
+        description: "Response if a internal server error occurs",
+        content: new OA\JsonContent(
+            oneOf: [
+                new OA\Schema(
+                    title: "Encryption error",
+                    properties: [
+                        new OA\Property(
+                            property: "message",
+                            type: "string",
+                        ),
+                    ]
+                ),
+                new OA\Schema(
+                    title: "Authentication token cache exception",
+                    properties: [
+                        new OA\Property(
+                            property: "message",
+                            type: "string",
+                        )
+                    ]
+                ),
+                new OA\Schema(
+                    title: "Authentication token provider exception",
                     properties: [
                         new OA\Property(
                             property: "message",
@@ -227,6 +274,85 @@ class HttpSessionController
         }
     }
 
+    #[OA\Delete(
+        path: "/session/logoff",
+        summary: "Logoff",
+        description:
+            "Invalidates the user's authentication token and removes it from the cache",
+        tags: ["Session"]
+    )]
+    #[OA\Parameter(
+        name: "Authorization",
+        in: "header",
+        required: true,
+        description: "Bearer token",
+        schema: new OA\Schema(
+            type: "string"
+        )
+    )]
+    #[OA\Response(
+        response: 200,
+        description: "Response if logoff process is successful",
+        content: new OA\JsonContent(
+            properties: [
+                new OA\Property(
+                    property: "status",
+                    type: "integer",
+                    example: 200
+                )
+            ]
+        )
+    )]
+    #[OA\Response(
+        response: 401,
+        description: "Response if user does not have credentials",
+        content: new OA\JsonContent(
+            properties: [
+                new OA\Property(
+                    property: "message",
+                    type: "string",
+                ),
+            ]
+        )
+    )]
+    #[OA\Response(
+        response: 403,
+        description: "Response if user is forbidden because of invalid token",
+        content: new OA\JsonContent(
+            properties: [
+                new OA\Property(
+                    property: "message",
+                    type: "string",
+                ),
+            ]
+        )
+    )]
+    #[OA\Response(
+        response: 500,
+        description: "Response if a internal server error occurs",
+        content: new OA\JsonContent(
+            oneOf: [
+                new OA\Schema(
+                    title: "Authentication token cache exception",
+                    properties: [
+                        new OA\Property(
+                            property: "message",
+                            type: "string",
+                        )
+                    ]
+                ),
+                new OA\Schema(
+                    title: "Authentication token provider exception",
+                    properties: [
+                        new OA\Property(
+                            property: "message",
+                            type: "string",
+                        )
+                    ]
+                )
+            ]
+        )
+    )]
     public function logoff(ServerRequestInterface $request, ResponseInterface $response, array $args): ResponseInterface
     {
         try {
@@ -251,6 +377,101 @@ class HttpSessionController
         }
     }
 
+    #[OA\Get(
+        path: "/session/me",
+        summary: "Get User Information",
+        description:
+            "Returns the information of the currently logged-in user",
+        tags: ["Session"]
+    )]
+    #[OA\Parameter(
+        name: "Authorization",
+        in: "header",
+        required: true,
+        description: "Bearer token",
+        schema: new OA\Schema(
+            type: "string"
+        )
+    )]
+    #[OA\Response(
+        response: 200,
+        description: "Response if credentials is valid",
+        content: new OA\JsonContent(
+            properties: [
+                new OA\Property(
+                    property: "data",
+                    type: "object",
+                    properties: [
+                        new OA\Property(
+                            property: "id",
+                            type: "integer",
+                            example: 1
+                        ),
+                        new OA\Property(
+                            property: "username",
+                            type: "string",
+                            example: "mvreisg"
+                        ),
+                        new OA\Property(
+                            property: "permissions",
+                            type: "array",
+                            items: new OA\Items(
+                                ref: "#/components/schemas/UserSectorPermissionEntity"
+                            )
+                        )
+                    ]
+                )
+            ]
+        )
+    )]
+    #[OA\Response(
+        response: 404,
+        description: "Response if a body value is missing, if the user does not exist",
+        content: new OA\JsonContent(
+            title: "Unexistant token",
+            properties: [
+                new OA\Property(
+                    property: "message",
+                    type: "string",
+                ),
+            ]
+        )
+    )]
+    #[OA\Response(
+        response: 500,
+        description: "Response if a internal server error occurs",
+        content: new OA\JsonContent(
+            oneOf: [
+                new OA\Schema(
+                    title: "Encryption error",
+                    properties: [
+                        new OA\Property(
+                            property: "message",
+                            type: "string",
+                        ),
+                    ]
+                ),
+                new OA\Schema(
+                    title: "Authentication token cache exception",
+                    properties: [
+                        new OA\Property(
+                            property: "message",
+                            type: "string",
+                        )
+                    ]
+                ),
+                new OA\Schema(
+                    title: "Authentication token provider exception",
+                    properties: [
+                        new OA\Property(
+                            property: "message",
+                            type: "string",
+                        )
+                    ]
+                )
+            ]
+        )
+    )]
     public function retrieveData(
         ServerRequestInterface $request,
         ResponseInterface $response,
